--- a/templates/partials/slider.html
+++ b/templates/partials/slider.html
@@ -15,6 +15,23 @@
       />
     </div>
     <div class="carousel-item">
+      <img
+        src="static/images/Wind_instruments.png"
+        class="d-block w-100"
+        alt="..."
+      />
+    </div>
+    <div class="carousel-item">
+      <img
+        src="static/images/Basic_Skills.png"
+        class="d-block w-100"
+        alt="..."
+      />
+    </div>
+    <div class="carousel-item">
+      <img src="static/images/Wib.png" class="d-block w-100" alt="..." />
+    </div>
+    <div class="carousel-item">
       <img src="..." class="d-block w-100" alt="..." />
     </div>
   </div>
