--- a/templates/partials/slider.html
+++ b/templates/partials/slider.html
@@ -5,34 +5,26 @@
 >
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="..." class="d-block w-100" alt="..." />
-    </div>
-    <div class="carousel-item">
-      <img
-        src="static/images/How_it_helps_You.png"
-        class="d-block w-100"
-        alt="..."
-      />
-    </div>
-    <div class="carousel-item">
       <img
         src="static/images/Wind_instruments.png"
         class="d-block w-100"
-        alt="..."
+        alt="static/images/Wind_instruments.png"
       />
     </div>
     <div class="carousel-item">
       <img
         src="static/images/Basic_Skills.png"
+        static
         class="d-block w-100"
-        alt="..."
+        alt="static/images/Basic_Skills.png"
       />
     </div>
     <div class="carousel-item">
-      <img src="static/images/Wib.png" class="d-block w-100" alt="..." />
-    </div>
-    <div class="carousel-item">
-      <img src="..." class="d-block w-100" alt="..." />
+      <img
+        src="static/images/how_it_helps_you.png"
+        class="d-block w-100"
+        alt="static/images/how_it_helps_you.png"
+      />
     </div>
   </div>
   <button
