--- a/templates/partials/menu.html
+++ b/templates/partials/menu.html
@@ -21,18 +21,15 @@
             >Home</a
           >
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="OI">Other instruments</a>
-        </li>
 
         <li class="nav-item">
-          <a class="nav-link disabled" aria-disabled="true" href="#"
-            >Basic skills</a
+          <a class="nav-link active" aria-disabled="False" href="Quest"
+            >Questions</a
           >
         </li>
 
         <li class="nav-item">
-          <a class="nav-link" href="BC">Breath control</a>
+          <a class="#" href="#"></a>
         </li>
         <li class="nav-item dropdown">
           <a
@@ -45,10 +42,10 @@
             Dropdown
           </a>
           <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">Action</a></li>
-            <li><a class="dropdown-item" href="#">Another action</a></li>
+            <li><a class="dropdown-item" href="BC">Breath control</a></li>
+            <li><a class="dropdown-item" href="OI">Other instruments</a></li>
+            <li><a class="dropdown-item" href="BS">Basic Skills</a></li>
             <li><hr class="dropdown-divider" /></li>
-            <li><a class="dropdown-item" href="#">Something else here</a></li>
           </ul>
         </li>
         <li class="nav-item">
