--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,3 @@
-{% extends 'layout.html' %} {% block content %} {% include"partials/slider.html"
-%}
+{% extends 'layout.html' %} {% block content %} {% include"partials/slider.html"%}
 <p>Hello world</p>
 {% endblock %}
