--- a/templates/index.html
+++ b/templates/index.html
@@ -1,3 +1,16 @@
-{% extends 'layout.html' %} {% block content %} {% include"partials/slider.html"%}
-<p>Hello world</p>
-{% endblock %}
+{% extends 'layout.html' %} {% block content %} {%
+include"partials/slider.html"%} {% for card in cards %}
+<div class="container">
+    <div class="row"
+        <div class="card" style="width: 18rem">
+            <img src="{{card [3]}}" class="card-img-top" alt="..." />
+            <div class="card-body">
+                <h5 class="card-title">{{card [0]}}</h5>
+                <p class="card-text">{{card [1]}}
+                </p>
+                <a href="#" class="btn btn-primary">{{card [2]}}</a>
+            </div>
+        </div>
+    </div>
+</div>
+{% endfor %} {% endblock %}
