--- a/templates/partials/menu.html
+++ b/templates/partials/menu.html
@@ -23,8 +23,13 @@
         </li>
 
         <li class="nav-item">
-          <a class="nav-link active" aria-disabled="False" href="Quest"
+          <a class="nav-link active" aria-disabled="False" href="questions.html"
             >Questions</a
+          >
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" aria-disabled="False" href="contact.html"
+            >Contact Me</a
           >
         </li>
 
