--- a/templates/index.html
+++ b/templates/index.html
@@ -2,8 +2,9 @@
 {%include"partials/slider.html"%}
 <div class="container">
   <div class="row">
+    <p></p>
     {% for card in cards %}
-    <div class="col-sm-12 col-md-6 col-lg-4">
+    <div class="col-sm-12 col-md-6 col-lg-4 mb-4">
       <div class="card">
         <img src="{{card [3]}}" class="card-img-top" alt="..." />
         <div class="card-body">
