--- a/templates/partials/menu.html
+++ b/templates/partials/menu.html
@@ -27,6 +27,12 @@
             >Questions</a
           >
         </li>
+
+        <li class="nav-item">
+          <a class="nav-link active" aria-disabled="False" href="tutoring.html"
+            >Tutoring</a
+          >
+        </li>
         <li class="nav-item">
           <a class="nav-link active" aria-disabled="False" href="contact.html"
             >Contact Me</a
