jazz album cards

--- a/templates/partials/menu.html
+++ b/templates/partials/menu.html
@@ -53,9 +53,9 @@
             Dropdown
           </a>
           <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="BC">Breath control</a></li>
+            <li><a class="dropdown-item" href="BC.html">Breath control</a></li>
             <li><a class="dropdown-item" href="OI">Other instruments</a></li>
-            <li><a class="dropdown-item" href="BS">Basic Skills</a></li>
+            <li><a class="dropdown-item" href="Bs">Basic Skills</a></li>
             <li><hr class="dropdown-divider" /></li>
           </ul>
         </li>
