--- a/templates/index.html
+++ b/templates/index.html
@@ -16,5 +16,46 @@
     </div>
     {% endfor %}
   </div>
+
+  <div class="row mt-5">
+    <div class="col-12">
+      <h1>Jazz Albums</h1>
+      <h3>
+        These are a mix of my fravorite jazz albums and the highley held artist
+      </h3>
+    </div>
+    <div class="col-sm-12 col-md-6 col-lg-4 mb-4 col">
+      <div class="card">
+        <img src="static/images/Mingus.png" class="card-img-top" alt="..." />
+        <div class="card-body">
+          <h5 class="card-title"><strong>Mingus uh um</strong></h5>
+          <p class="card-text">
+            Mingus Ah Um is one of Charles Mingus’ most celebrated albums, and
+            critics have had plenty to say about it over the years
+          </p>
+          <p class="card-text">
+            <small class="text-body-secondary">You should listen</small>
+          </p>
+        </div>
+      </div>
+      <div class="col-sm-12 col-md-6 col-lg-4 mb-4 col">
+        <div class="card">
+          <div class="card-body">
+            <h5 class="card-title">Card</h5>
+            <p class="card-text">
+              This is a wider card with supporting text below as a natural
+              lead-in to additional content. This content is a little bit
+              longer.
+            </p>
+            <p class="card-text">
+              <small class="text-body-secondary">Last updated 3 mins ago</small>
+            </p>
+          </div>
+          <img src="..." class="card-img-bottom" alt="..." />
+        </div>
+      </div>
+      #more cards here
+    </div>
+  </div>
+  {% endblock %}
 </div>
-{% endblock %}
