--- a/templates/questions.html
+++ b/templates/questions.html
@@ -1,12 +1,14 @@
 {% extends 'layout.html' %} {% block content %}
 <div class="container">
   <div class="row">
+    
     <h1>Frequently asked questions</h1>
 
     <div class="container">
       <div class="row">
+        <div class="col-sm-12 col-md-6 col-lg-4 mb-4">
         <p></p>
-        <h5>Questions filler</h5>
+        <h5>These are some frequently asked questions</h5>
         <h7
           ><strong
             >1.In what key is the alto saxophone typically tuned, and how does
@@ -72,5 +74,8 @@
       </div>
     </div>
   </div>
+          <img
+        src="static/images/Jazz_saxophone_2.png">
+
 </div>
 {% endblock %}
