--- a/templates/index.html
+++ b/templates/index.html
@@ -24,7 +24,8 @@
         These are a mix of my fravorite jazz albums and the highley held artist
       </h3>
     </div>
-    <div class="col-sm-12 col-md-6 col-lg-4 mb-4 col">
+    `
+    <div class="col-sm-12 col-md-6 col-lg-4 mb-4">
       <div class="card">
         <img src="static/images/Mingus.png" class="card-img-top" alt="..." />
         <div class="card-body">
@@ -38,7 +39,7 @@
           </p>
         </div>
       </div>
-      <div class="col-sm-12 col-md-6 col-lg-4 mb-4 col">
+      <div class="col-sm-12 col-md-6 col-lg-4 mb-4">
         <div class="card">
           <div class="card-body">
             <h5 class="card-title">Card</h5>
