--- a/templates/index.html
+++ b/templates/index.html
@@ -16,47 +16,33 @@
     </div>
     {% endfor %}
   </div>
-
-  <div class="row mt-5">
-    <div class="col-12">
-      <h1>Jazz Albums</h1>
-      <h3>
-        These are a mix of my fravorite jazz albums and the highley held artist
-      </h3>
-    </div>
-    `
-    <div class="col-sm-12 col-md-6 col-lg-4 mb-4">
-      <div class="card">
+</div>
+<div class="container">
+  <div class="row">
+    <h1><strong> Jazz albums</strong></h1>
+    <p></p>
+    <div class="row g-1" <div class="col-md-6 mb-4">
+      <div class="card" style="width: 18rem">
         <img src="static/images/Mingus.png" class="card-img-top" alt="..." />
         <div class="card-body">
-          <h5 class="card-title"><strong>Mingus uh um</strong></h5>
           <p class="card-text">
-            Mingus Ah Um is one of Charles Mingus’ most celebrated albums, and
-            critics have had plenty to say about it over the years
-          </p>
-          <p class="card-text">
-            <small class="text-body-secondary">You should listen</small>
+            Some quick example text to build on the card title and make up the
+            bulk of the card’s content.
           </p>
         </div>
       </div>
-      <div class="col-sm-12 col-md-6 col-lg-4 mb-4">
-        <div class="card">
-          <div class="card-body">
-            <h5 class="card-title">Card</h5>
-            <p class="card-text">
-              This is a wider card with supporting text below as a natural
-              lead-in to additional content. This content is a little bit
-              longer.
-            </p>
-            <p class="card-text">
-              <small class="text-body-secondary">Last updated 3 mins ago</small>
-            </p>
-          </div>
-          <img src="..." class="card-img-bottom" alt="..." />
+    </div>
+    <div <div class="col-md-6 mb-4">
+      <div class="card" style="width: 18rem">
+        <img src="static/images/Mingus.png" class="card-img-top" alt="..." />
+        <div class="card-body">
+          <p class="card-text">
+            Some quick example text to build on the card title and make up the
+            bulk of the card’s content.
+          </p>
         </div>
       </div>
-      #more cards here
     </div>
   </div>
-  {% endblock %}
 </div>
+{% endblock %}
