--- a/templates/index.html
+++ b/templates/index.html
@@ -19,9 +19,13 @@
 </div>
 <div class="container">
   <div class="row">
-    <h1><strong> Jazz albums</strong></h1>
-    <p></p>
-    <div class="row g-1" <div class="col-md-6 mb-4">
+    <div class="col-12">
+      <h1><strong>Jazz albums</strong></h1>
+      <p></p>
+    </div>
+  </div>
+  <div class="row g-1">
+    <div class="col-md-3 mb-4">
       <div class="card" style="width: 18rem">
         <img src="static/images/Mingus.png" class="card-img-top" alt="..." />
         <div class="card-body">
@@ -32,9 +36,13 @@
         </div>
       </div>
     </div>
-    <div <div class="col-md-6 mb-4">
+    <div class="col-md-6 mb-4">
       <div class="card" style="width: 18rem">
-        <img src="static/images/Mingus.png" class="card-img-top" alt="..." />
+        <img
+          src="static/images/tribe_called_quest"
+          class="card-img-top"
+          alt="..."
+        />
         <div class="card-body">
           <p class="card-text">
             Some quick example text to build on the card title and make up the
