--- a/templates/index.html
+++ b/templates/index.html
@@ -25,7 +25,7 @@
     </div>
   </div>
   <div class="row g-1">
-    <div class="col-md-3 mb-4">
+    <div class="col-md-4 mb-4">
       <div class="card" style="width: 18rem">
         <img src="static/images/Mingus.png" class="card-img-top" alt="..." />
         <div class="card-body">
@@ -36,10 +36,25 @@
         </div>
       </div>
     </div>
-    <div class="col-md-6 mb-4">
+    <div class="col-md-4 mb-4">
       <div class="card" style="width: 18rem">
         <img
-          src="static/images/tribe_called_quest"
+          src="static/images/tribe_called_quest.png"
+          class="card-img-top"
+          alt="..."
+        />
+        <div class="card-body">
+          <p class="card-text">
+            Some quick example text to build on the card title and make up the
+            bulk of the card’s content.
+          </p>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-4 mb-4">
+      <div class="card" style="width: 18rem">
+        <img
+          src="static/images/tribe_called_quest.png"
           class="card-img-top"
           alt="..."
         />
