--- a/templates/partials/menu.html
+++ b/templates/partials/menu.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg bg-body-tertiary">
+<nav class="navbar navbar-expand-lg bg-body-tertiary sticky-top">
   <div class="container-fluid">
     <a class="navbar-brand" href="index.html"
       ><img src="static/images/logo.png"
@@ -17,23 +17,26 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="index.html"
+          <a
+            class="nav-link active basic-3"
+            aria-current="page"
+            href="index.html"
             >Home</a
           >
         </li>
 
-        <li class="nav-item">
+        <li class="nav-item basic-3">
           <a class="nav-link active" aria-disabled="False" href="questions.html"
             >Questions</a
           >
         </li>
 
-        <li class="nav-item">
+        <li class="nav-item basic-3">
           <a class="nav-link active" aria-disabled="False" href="tutoring.html"
             >Tutoring</a
           >
         </li>
-        <li class="nav-item">
+        <li class="nav-item basic-3">
           <a class="nav-link active" aria-disabled="False" href="contact.html"
             >Contact Me</a
           >
@@ -53,9 +56,13 @@
             Dropdown
           </a>
           <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="BC.html">Breath control</a></li>
-            <li><a class="dropdown-item" href="OI">Other instruments</a></li>
-            <li><a class="dropdown-item" href="Bs">Basic Skills</a></li>
+            <li>
+              <a class="dropdown-item disabled" href="BC">Breath control</a>
+            </li>
+            <li>
+              <a class="dropdown-item disabled" href="OI">Other instruments</a>
+            </li>
+            <li><a class="dropdown-item" href="BS.html">Basic Skills</a></li>
             <li><hr class="dropdown-divider" /></li>
           </ul>
         </li>
