--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,9 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link
+      rel="icon"
+      type="image/css"
+      href="/static/images/logo.png"
+      sizes="96x96"
+    />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Bootstrap demo</title>
+    <title>Come for Sax-aphones</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -21,3 +27,5 @@
     ></script>
   </body>
 </html>
+
+<body style="background-color:rgba(231, 168, 85, 0.829)"
