--- a/templates/questions.html
+++ b/templates/questions.html
@@ -78,4 +78,9 @@
         src="static/images/Jazz_saxophone_2.png">
 
 </div>
+
+
+<body style="background: linear-gradient(to right, red, orange, yellow, green, blue, indigo, violet);
+}
+
 {% endblock %}
