--- a/templates/tutoring.html
+++ b/templates/tutoring.html
@@ -1,29 +1,88 @@
 {% extends 'layout.html' %} {% block content %}
 <div class="container">
-  <div class="row">
+  <div class="row"></div>
+  <style>
+    body {
+      background-color: #e5eaf1; 
+    }
+  </style>
+          <div class="pricing-header p-3 pb-md-4 mx-auto text-center">
+            <h1 class="display-4 fw-normal text-body-emphasis">Lesson Pricing</h1>
+            <p class="fs-5 text-body-secondary">
+              Take your video editing skills to the next level with tailored lessons designed for efficiency and speed. Whether you're just starting out or looking to streamline your workflow, we’ve got a plan for you:
+            </p>
+          </div>
+        </header>
+        <main>
+          <div class="row row-cols-1 row-cols-md-3 mb-3 text-center">
+            <div class="col">
+              <div class="card mb-4 rounded-3 shadow-sm">
+                <div class="card-header py-3">
+                  <h4 class="my-0 fw-normal">Beginner</h4>
+                </div>
+                <div class="card-body">
+                  <h1 class="card-title pricing-card-title">
+                    $20<small class="text-body-secondary fw-light">/mo</small>
+                  </h1>
+                  <ul class="list-unstyled mt-3 mb-4">
+                    <li>Tailored lesson plan for your skills</li>
+                    <li>20hr Course</li>
+                    <li>Skill support</li>
+                    <li>Help center access</li>
+                  </ul>
+                  <button type="submit" class="btn btn-primary"><a class="nav-link" href="beginner.html">ㅤㅤㅤㅤㅤㅤㅤㅤSign up Nowㅤㅤㅤㅤㅤㅤㅤㅤ</a></button>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card mb-4 rounded-3 shadow-sm">
+                <div class="card-header py-3">
+                  <h4 class="my-0 fw-normal">Intermediate</h4>
+                </div>
+                <div class="card-body">
+                  <h1 class="card-title pricing-card-title">
+                    $50<small class="text-body-secondary fw-light">/mo</small>
+                  </h1>
+                  <ul class="list-unstyled mt-3 mb-4">
+                    <li>Tailored lesson plan for your skills</li>
+                    <li>50hr Course</li>
+                    <li>Priority Skill support</li>
+                    <li>Help center access</li>
+                  </ul>
+                  <button type="submit" class="btn btn-primary"><a class="nav-link" href="intermediate.html">ㅤㅤㅤㅤㅤㅤㅤㅤSign up Nowㅤㅤㅤㅤㅤㅤㅤㅤ</a></button>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card mb-4 rounded-3 shadow-sm border-primary">
+                <div class="card-header py-3 text-bg-primary border-primary">
+                  <h4 class="my-0 fw-normal">Professional</h4>
+                </div>
+                <div class="card-body">
+                  <h1 class="card-title pricing-card-title">
+                    $200<small class="text-body-secondary fw-light">/mo</small>
+                  </h1>
+                  <ul class="list-unstyled mt-3 mb-4">
+                    <li>Tailored lesson plan for your skills</li>
+                    <li>200hr Course</li>
+                    <li>Priority skill support</li>
+                    <li>Help center access</li>
+                  </ul>
+                  <button type="submit" class="btn btn-primary"><a class="nav-link" href="pro.html">ㅤㅤㅤㅤㅤㅤㅤㅤSign up Nowㅤㅤㅤㅤㅤㅤㅤㅤ</a></button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </main>
+    </body>
+  </html>
 
-<div class="container">
-  <div class="row">
-    <div class="col-lg-6 col-md-4 col-sm-12"
-      <ol>
-        <li>Phone: 0452 524 849</li>
-        <li>Email: Kim@hotbread.com</li>
-        <li>Adress: 445 Illawarra Rd, Marrickville NSW 220452 524 849</li>
-      </ol>
-    <div class="col-lg-6 col-md-4 col-sm-14">
-      <iframe
-        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3310.9749182568617!2d151.1501625!3d-33.9160451!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6b12b08793b79503%3A0xdea4ea4caab685a7!2sKim%20Hotbread%20PTY%20Ltd.%20Marrickville!5e0!3m2!1sen!2sau!4v1748828714406!5m2!1sen!2sau" 
-        width="600" 
-        height="450" 
-        style="border:0;" 
-        allowfullscreen="" 
-        loading="lazy" 
-        refferrerpolicy="no-referrer-when-downgrade"
-      ></iframe>
 
-    </div>
-  </div>
-</div>
-  </div>
-</div>
-{% endblock %}
+
+
+  <body style="background: linear-gradient(to right, red, orange, yellow, green, blue, indigo, violet);
+}
+  {% endblock %}
+
+
+
