--- a/templates/BS.html
+++ b/templates/BS.html
@@ -39,5 +39,43 @@
       </h7>
     </div>
   </div>
+
+  <!DOCTYPE html>
+  <html lang="en">
+    <head>
+      <meta charset="UTF-8" />
+      <style>
+        body {
+          margin: 0;
+          height: 100vh;
+          background: linear-gradient(
+            270deg,
+            rgb(207, 125, 32),
+            orange,
+            rgb(230, 175, 73),
+            rgb(226, 184, 129),
+            rgb(238, 155, 30),
+            rgb(226, 136, 63),
+            rgb(233, 144, 42)
+          );
+          background-size: 1400% 1400%;
+          animation: rainbow 20s linear infinite;
+        }
+
+        @keyframes rainbow {
+          0% {
+            background-position: 0% 50%;
+          }
+          50% {
+            background-position: 100% 50%;
+          }
+          100% {
+            background-position: 0% 50%;
+          }
+        }
+      </style>
+    </head>
+    <body></body>
+  </html>
   {% endblock %}
 </div>
