--- a/templates/questions.html
+++ b/templates/questions.html
@@ -6,7 +6,7 @@
 
     <div class="container">
       <div class="row">
-        <div class="col-sm-12 col-md-6 col-lg-4 mb-4">
+        <div class="col-sm-12">
         <p></p>
         <h5>These are some frequently asked questions</h5>
         <h7
@@ -74,13 +74,50 @@
       </div>
     </div>
   </div>
-          <img
-        src="static/images/Jazz_saxophone_2.png">
 
+            <div class="row">
+              <div class></div> 
+
+              </div>
+            </div>
 </div>
 
 
-<body style="background: linear-gradient(to right, red, orange, yellow, green, blue, indigo, violet);
-}
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <style>
+      body {
+        margin: 0;
+        height: 100vh;
+        background: linear-gradient(
+          270deg,
+          rgb(207, 125, 32),
+          orange,
+          rgb(230, 175, 73),
+          rgb(226, 184, 129),
+          rgb(238, 155, 30),
+          rgb(226, 136, 63),
+          rgb(233, 144, 42)
+        );
+        background-size: 1400% 1400%;
+        animation: rainbow 20s linear infinite;
+      }
 
+      @keyframes rainbow {
+        0% {
+          background-position: 0% 50%;
+        }
+        50% {
+          background-position: 100% 50%;
+        }
+        100% {
+          background-position: 0% 50%;
+        }
+      }
+    </style>
+  </head>
+  <body></body>
+</html>
 {% endblock %}
